[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/menus/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/menus/credits/bk_icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/shared/menus/FNFStyleText_Bold.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/graphics/menus/credits/newgrounds_logo.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/menus/credits/Ninjamuffin-Icon.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/menus/credits/PhantomArcade-Icon.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/menus/credits/evilsk8r-Icon(2).png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/menus/credits/Kawaisprite-Icon.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/menus/logos/benjine_logo.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/menus/title_screen/GF_Dance_Title.res" type="SpriteFrames" id=10]
[ext_resource path="res://scripts/game/characters/BeatNode.gd" type="Script" id=11]
[ext_resource path="res://scripts/game/characters/DoubleIdleBeatNode.gd" type="Script" id=12]
[ext_resource path="res://assets/graphics/menus/title_screen/Title_Enter.res" type="SpriteFrames" id=13]
[ext_resource path="res://assets/sounds/confirmMenu.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Part1"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Part1/Text:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "thisisbennyk" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Part10"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Part4/Text:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "friday" ]
}

[sub_resource type="Animation" id=4]
resource_name = "Part11"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part4/Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "friday
night" ]
}

[sub_resource type="Animation" id=5]
resource_name = "Part12"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part4/Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "friday
night
funkin'" ]
}

[sub_resource type="Animation" id=6]
resource_name = "Part13"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Part2"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part1/Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "thisisbennyk
presents" ]
}

[sub_resource type="Animation" id=8]
resource_name = "Part3"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Part4"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Part2/NewgroundsLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Part5"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part2/NewgroundsLogo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "Part6"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Part7"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Part3/Text2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Part8"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part3/Text2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Part9"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Part1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Part2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Intro_Part3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Intro_Part4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Intro_Part1/Text:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "thisisbennyk" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Intro_Part2/NewgroundsLogo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Intro_Part3/Text2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Intro_Part4/Text:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "friday" ]
}

[sub_resource type="Animation" id=17]
resource_name = "Dance_Left"
length = 0.625
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.583333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 14 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Dance_Right"
length = 0.625
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.583333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15, 29 ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Idle"
length = 0.625
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.125, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.955, 0.955 ), Vector2( 1, 1 ), Vector2( 0.973, 0.973 ), Vector2( 0.967, 0.967 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Color_Shift"
length = 1.875
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Press Enter to Begin" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.83333, 1.875 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 44, 44 ]
}

[sub_resource type="Animation" id=23]
resource_name = "Flash"
length = 0.166667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ENTER PRESSED" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Press Enter to Begin" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Flash"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Intro_Part1" type="Node2D" parent="."]
visible = false

[node name="ThisIsBennyK" type="Sprite" parent="Intro_Part1"]
position = Vector2( 640, 250 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Text" parent="Intro_Part1" instance=ExtResource( 3 )]
margin_left = 365.0
margin_top = 320.0
margin_right = 915.0
margin_bottom = 390.0
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "thisisbennyk"
align = 1
valign = 1

[node name="Intro_Part2" type="Node2D" parent="."]
visible = false

[node name="Text" parent="Intro_Part2" instance=ExtResource( 3 )]
margin_left = 170.5
margin_top = 139.624
margin_right = 1109.5
margin_bottom = 209.624
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "BASED ON THE GAME BY"
align = 1
valign = 1

[node name="FNF_Devs" type="Node2D" parent="Intro_Part2"]
position = Vector2( 415, 261.341 )
__meta__ = {
"_edit_group_": true
}

[node name="Ninjamuffin" type="Sprite" parent="Intro_Part2/FNF_Devs"]
texture = ExtResource( 5 )

[node name="PhantomArcade" type="Sprite" parent="Intro_Part2/FNF_Devs"]
position = Vector2( 142, 0 )
texture = ExtResource( 6 )

[node name="KawaiSprite" type="Sprite" parent="Intro_Part2/FNF_Devs"]
position = Vector2( 288, 0 )
texture = ExtResource( 8 )

[node name="EvilSk8r" type="Sprite" parent="Intro_Part2/FNF_Devs"]
position = Vector2( 450, 0 )
texture = ExtResource( 7 )

[node name="Text2" parent="Intro_Part2" instance=ExtResource( 3 )]
margin_left = 193.0
margin_top = 319.624
margin_right = 1087.0
margin_bottom = 389.624
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "in association with"
align = 1
valign = 1

[node name="NewgroundsLogo" type="Sprite" parent="Intro_Part2"]
visible = false
position = Vector2( 640, 514 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Intro_Part3" type="Node2D" parent="."]
visible = false

[node name="Text" parent="Intro_Part3" instance=ExtResource( 3 )]
margin_left = 308.0
margin_top = 200.0
margin_right = 972.0
margin_bottom = 270.0
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "SOMETHING FUNNY"
align = 1
valign = 1

[node name="Text2" parent="Intro_Part3" instance=ExtResource( 3 )]
visible = false
margin_left = 308.0
margin_top = 200.0
margin_right = 972.0
margin_bottom = 270.0
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "
IS SAID HERE"
align = 1
valign = 1

[node name="Intro_Part4" type="Node2D" parent="."]
visible = false

[node name="Text" parent="Intro_Part4" instance=ExtResource( 3 )]
margin_left = 308.0
margin_top = 200.0
margin_right = 972.0
margin_bottom = 270.0
grow_horizontal = 2
custom_constants/line_spacing = -10
text = "friday"
align = 1
valign = 1

[node name="Intro_Sequence" type="AnimationPlayer" parent="."]
anims/Part1 = SubResource( 1 )
anims/Part10 = SubResource( 3 )
anims/Part11 = SubResource( 4 )
anims/Part12 = SubResource( 5 )
anims/Part13 = SubResource( 6 )
anims/Part2 = SubResource( 7 )
anims/Part3 = SubResource( 8 )
anims/Part4 = SubResource( 9 )
anims/Part5 = SubResource( 10 )
anims/Part6 = SubResource( 11 )
anims/Part7 = SubResource( 12 )
anims/Part8 = SubResource( 13 )
anims/Part9 = SubResource( 14 )
anims/RESET = SubResource( 2 )

[node name="GF" type="AnimatedSprite" parent="."]
position = Vector2( 512, 50.4 )
frames = ExtResource( 10 )
animation = "gfDance"
centered = false
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GF"]
anims/Dance_Left = SubResource( 17 )
anims/Dance_Right = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="BenjineLogo" type="Sprite" parent="."]
position = Vector2( 329, 280 )
texture = ExtResource( 9 )
script = ExtResource( 11 )
idle_frequency = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="BenjineLogo"]
anims/Idle = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Press_Enter" type="AnimatedSprite" parent="."]
position = Vector2( 640, 630 )
frames = ExtResource( 13 )
animation = "Press Enter to Begin"
offset = Vector2( 240, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Press_Enter"]
autoplay = "Color_Shift"
anims/Color_Shift = SubResource( 22 )
anims/Flash = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="Flash" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -39.9431, -36.2437, -54.1975, 763.783, 1340.95, 760.22, 1371.24, -45.1527 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flash"]
anims/Flash = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="Confirm_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"
